--- a/src/app/classroom/components/pickup-image/pickup-image.component.scss
+++ b/src/app/classroom/components/pickup-image/pickup-image.component.scss
@@ -1,21 +1,10 @@
-.pickup-link {
-  display: block;
-  padding: 8px;
-  border: 1px solid #dfdfdf;
-  border-radius: 4px;
-  transition: all .2s;
-  cursor: pointer;
+.avatar {
+  max-width: 102px;
+  max-height: 102px;
 
-  &:hover {
-    border-width: 2px;
-    border-color: #555;
-    padding: 7px !important;
-  }
-
-  .avatar {
-    max-width: 100%;
-    width: 100%;
-    border-radius: 50%;
+  &.xs {
+    max-width: 230px;
+    max-height: 230px;
   }
 }
 
@@ -23,26 +12,16 @@
 .image-list-container {
   text-align: center;
   overflow-x: hidden;
+}
 
-  .avatar-item-list {
-    background-color: white;
-    cursor: pointer;
+.avatar-item-list {
+  transition: all .2s;
 
-    img {
-      max-width: 110px;
-      width: 100%;
-      border-radius: 50%;
-      border: 4px solid white;
-      background-color: white;
-      transition: all .2s;
+  &:hover {
+    transform: scale(1.3);
+  }
 
-      &:hover {
-        transform: scale(1.4);
-      }
-
-      &.selected {
-        border-color: #555;
-      }
-    }
+  .avatar.selected {
+    background-color: #ddd;
   }
 }
