--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,5 +3,6 @@
 @import "scss/variables";
 @import "scss/theming";
 @import "scss/typography";
+@import "scss/components";
 @import "scss/main";
 @import "~css-utilities/dist/style.min.css";
