--- a/src/app/classroom/components/pickup-image/pickup-image-dialog.component.html
+++ b/src/app/classroom/components/pickup-image/pickup-image-dialog.component.html
@@ -1,9 +1,9 @@
 <h2 mat-dialog-title>{{'PICKUP_IMAGE' | translate}}</h2>
-<div mat-dialog-content class="image-list-container mat-card mat-elevation-z0" fxLayout="row wrap">
-	<div fxFlex="25" class="avatar-item-list" *ngFor="let img of data.imageList">
-		<a matRipple ngClass.xs="xs" class="avatar avatar-button" [ngClass]="{'selected': img.selected}" (click)="pickup(img)">
-			<img class="avatar-image" [src]="srcImage({img: img.id})" alt="img.id">
-		</a>
+<div mat-dialog-content class="grid-image-list mat-card mat-elevation-z0">
+	<div class="avatar-item" fxFlexAlign="center center" *ngFor="let img of data.imageList">
+		<img matRipple class="avatar-image" [ngClass]="{'selected': img.selected}"
+			[ngClass.xs]="{'selected': img.selected, 'xs': true}" (click)="pickup(img)" [src]="srcImage({img: img.id})"
+			alt="img.id">
 	</div>
 </div>
 <mat-dialog-actions align="end">
