--- a/src/app/classroom/components/pickup-image/pickup-image.component.scss
+++ b/src/app/classroom/components/pickup-image/pickup-image.component.scss
@@ -9,19 +9,25 @@
 }
 
 // Dialog
-.image-list-container {
+.grid-image-list {
   text-align: center;
   overflow-x: hidden;
-}
+  display: grid;
+  grid-template-columns: repeat(4, minmax(64px, 96px));
+  grid-gap: 10px;
 
-.avatar-item-list {
-  transition: all .2s;
+  img.avatar-image {
+    display: block;
+    transition: all .2s;
+    border-radius: 50%;
+    cursor: pointer;
 
-  &:hover {
-    transform: scale(1.3);
-  }
+    &.selected {
+      background-color: #ddd;
+    }
 
-  .avatar.selected {
-    background-color: #ddd;
+    &:hover {
+      transform: scale(1.3);
+    }
   }
 }
