Fix model selects

--- a/src/app/classroom/student-profile/components/student-profile/student-profile.component.html
+++ b/src/app/classroom/student-profile/components/student-profile/student-profile.component.html
@@ -34,9 +34,9 @@
       <mat-icon>archive</mat-icon>
       <span>{{'ARCHIVE_STUDENT' | translate}}</span>
     </button>
-    <button mat-menu-item (click)="delete()" disabled>
+    <button mat-menu-item (click)="delete()">
       <mat-icon>delete</mat-icon>
-      <span>{{'DELETE_STUDENT' | translate}}</span>
+      <span>{{'STUDENT_DELETE' | translate}}</span>
     </button>
   </mat-menu>
 
