--- a/src/app/classroom/students/components/student-creation/student-creation.component.html
+++ b/src/app/classroom/students/components/student-creation/student-creation.component.html
@@ -1,6 +1,6 @@
 <div class="mb-2" fxLayout="row" fxLayoutAlign="space-between center">
   <!-- Title -->
-  <h2 class="m-0" mat-dialog-title>{{'ADD_STUDENT' | translate}}</h2>
+  <h2 class="m-0" mat-dialog-title>{{(data.idStudent ? 'EDIT_STUDENT' : 'ADD_STUDENT') | translate}}</h2>
 
   <!-- Sign Out -->
   <button mat-icon-button mat-dialog-close attr.aria-label="{{'CANCEL' | translate}}">
@@ -47,11 +47,11 @@
         <!-- Academic course -->
         <mat-form-field appearance="outline" fxFlex="65">
           <mat-label>{{'FORM.ACADEMIC_COURSE' | translate}}</mat-label>
-          <mat-select formControlName="studentAcademicCourseCtrl"
+          <mat-select formControlName="studentAcademicCourseCtrl" [compareWith]="equals"
             attr.aria-label="{{'FORM.ACADEMIC_COURSE' | translate}}">
             <mat-option>-- {{'NONE' | translate}} --</mat-option>
             <mat-optgroup *ngFor="let group of academicCourses" [label]="group.name | translate">
-              <mat-option *ngFor="let course of group.group" [value]="course.value">
+              <mat-option *ngFor="let course of group.group" [value]="course">
                 {{course.viewValue}} {{group.name | translate | lowercase}}
               </mat-option>
             </mat-optgroup>
@@ -106,10 +106,11 @@
       <!-- Conservatory course -->
       <mat-form-field appearance="outline" fxFlex="35">
         <mat-label>{{'FORM.CONSERVATORY_COURSE' | translate}}</mat-label>
-        <mat-select formControlName="musicalCourseCtrl" attr.aria-label="{{'FORM.CONSERVATORY_COURSE' | translate}}">
+        <mat-select formControlName="musicalCourseCtrl" [compareWith]="equals"
+          attr.aria-label="{{'FORM.CONSERVATORY_COURSE' | translate}}">
           <mat-option>-- {{'NONE' | translate}} --</mat-option>
           <mat-optgroup *ngFor="let group of conservatoryCourses" [label]="group.name | translate">
-            <mat-option *ngFor="let course of group.group" [value]="course.value">
+            <mat-option *ngFor="let course of group.group" [value]="course">
               {{course.viewValue}} {{group.name | translate | lowercase}}
             </mat-option>
           </mat-optgroup>
@@ -128,11 +129,12 @@
       <!-- Instrument -->
       <mat-form-field appearance="outline" fxFlex="50">
         <mat-label>{{'FORM.INSTRUMENT' | translate}}</mat-label>
-        <mat-select formControlName="instrumentCtrl" attr.aria-label="{{'FORM.INSTRUMENT' | translate}}">
+        <mat-select formControlName="instrumentCtrl" [compareWith]="equals"
+          attr.aria-label="{{'FORM.INSTRUMENT' | translate}}">
           <mat-option>-- {{'NONE' | translate}} --</mat-option>
           <mat-optgroup *ngFor="let group of instruments" [label]="group.name | translate">
-            <mat-option *ngFor="let course of group.group" [value]="course.value">
-              {{'INSTRUMENT.' + course.viewValue | translate}}
+            <mat-option *ngFor="let instrument of group.group" [value]="instrument">
+              {{'INSTRUMENT.' + instrument.viewValue | translate}}
             </mat-option>
           </mat-optgroup>
         </mat-select>
@@ -142,7 +144,8 @@
       <!-- Subjects -->
       <mat-form-field appearance="outline" fxFlex="50">
         <mat-label>{{'FORM.SUBJECTS' | translate}}</mat-label>
-        <mat-select formControlName="subjectsCtrl" multiple attr.aria-label="{{'FORM.SUBJECTS' | translate}}">
+        <mat-select formControlName="subjectsCtrl" [compareWith]="equals" multiple
+          attr.aria-label="{{'FORM.SUBJECTS' | translate}}">
           <mat-option *ngFor="let subject of subjects" [value]="subject">
             {{'SUBJECT.' + subject.viewValue | translate}}
           </mat-option>
