--- a/src/app/classroom/components/logout-dialog/logout-dialog.component.html
+++ b/src/app/classroom/components/logout-dialog/logout-dialog.component.html
@@ -2,7 +2,7 @@
 <h2 mat-dialog-title>{{'MSG.LOGOUT' | translate}}</h2>
 
 <!-- Content -->
-<p class="mat-hint" mat-dialog-content>{{'MSG.LOGOUT.CONFIRM' | translate}}</p>
+<p class="mat-hint" mat-dialog-content>{{'MSG.LOGOUT_CONFIRM' | translate}}</p>
 
 <!-- Action -->
 <div class="mt-2" mat-dialog-actions fxLayout="row" fxLayoutAlign="end center">
