--- a/src/app/classroom/students/components/student-card/student-card.component.html
+++ b/src/app/classroom/students/components/student-card/student-card.component.html
@@ -1,4 +1,4 @@
-<mat-card class="p-1 mt-h mb-h mat-elevation-z0" matRipple [routerLink]="[ '/aula/alumno', student.id ]">
+<mat-card class="p-1 mt-h mb-h mat-elevation-z0 aumente" matRipple [routerLink]="[ '/aula/alumno', student.id ]">
   <div fxLayout="row" fxLayoutAlign="space-between center">
 
     <div class="row mr-h ml-h" fxLayout="row" fxLayoutAlign="start center">
