--- a/src/app/classroom/components/classroom/classroom.component.html
+++ b/src/app/classroom/components/classroom/classroom.component.html
@@ -5,14 +5,14 @@
 <mat-sidenav-container class="sidenav-container">
 
   <!-- Side-menu -->
-  <mat-sidenav #sideMenu class="sidenav border-0" [mode]="mobileQuery.matches ? 'over' : 'side'"
-    [opened]="!mobileQuery.matches" [fixedInViewport]="true" fixedTopGap="64"
+  <mat-sidenav #sideMenu class="sidenav border-0" [mode]="mobileQueryS.matches ? 'over' : 'side'"
+    [opened]="!mobileQueryS.matches" [fixedInViewport]="true" fixedTopGap="64"
     [@onSideNavChange]="{value: onSideNavChange ? 'open' : 'close', params: {widthClose: animStyles.close.width, widthOpen: animStyles.open.width}}">
     <a13-side-menu></a13-side-menu>
   </mat-sidenav>
 
   <!-- Content -->
-  <mat-sidenav-content
+  <mat-sidenav-content id="main-content-container"
     [@onMainContentChange]="{value: onSideNavChange ? 'open' : 'close', params: {leftClose: animStyles.close.left, leftOpen: animStyles.open.left}}">
     <div class="main-content">
       <router-outlet></router-outlet>
