--- a/src/app/classroom/components/student-delete-dialog/student-delete-dialog.component.html
+++ b/src/app/classroom/components/student-delete-dialog/student-delete-dialog.component.html
@@ -7,5 +7,5 @@
 <!-- Action -->
 <div class="mt-2" mat-dialog-actions fxLayout="row" fxLayoutAlign="end center">
   <button mat-button (click)="onNoClick()">{{'CANCEL' | translate}}</button>
-  <button mat-button color="primary" cdkFocusInitial (click)="ok()">{{'DELETE' | translate}}</button>
+  <button mat-button color="warn" cdkFocusInitial (click)="ok()">{{'DELETE' | translate}}</button>
 </div>
