student creation phone control

--- a/src/app/classroom/students/components/student-creation/student-creation.component.html
+++ b/src/app/classroom/students/components/student-creation/student-creation.component.html
@@ -76,7 +76,7 @@
       <!-- Father's phone -->
       <mat-form-field appearance="outline" fxFlex="35">
         <mat-label>{{'FORM.PHONE' | translate}}</mat-label>
-        <input matInput type="number" formControlName="fatherPhoneCtrl" attr.aria-label="{{'FORM.PHONE' | translate}}"
+        <input matInput formControlName="fatherPhoneCtrl" attr.aria-label="{{'FORM.PHONE' | translate}}"
           autocomplete="off">
         <mat-icon class="mat-hint pr-1" matPrefix>phone</mat-icon>
       </mat-form-field>
@@ -92,7 +92,7 @@
       <!-- Mother's phone -->
       <mat-form-field appearance="outline" fxFlex="35">
         <mat-label>{{'FORM.PHONE' | translate}}</mat-label>
-        <input matInput type="number" formControlName="motherPhoneCtrl" attr.aria-label="{{'FORM.PHONE' | translate}}"
+        <input matInput formControlName="motherPhoneCtrl" attr.aria-label="{{'FORM.PHONE' | translate}}"
           autocomplete="off">
         <mat-icon class="mat-hint pr-1" matPrefix>phone</mat-icon>
       </mat-form-field>
